# flat-render

./: CMakeLists.txt  LICENSE  README.md
src/: loader.cpp  loader.hpp  main.cpp
